Revision history for autodie

{{$NEXT}}

2.23      2014-01-27 13:50:55EST+1100 Australia/Melbourne

        * TEST / BUGFIX: Improved testing support on Android
          and Blackberry devices. (GH #44, thanks to
          Hugmeir.)

        * TEST / INTERNAL / TRAVIS: Various non-code
          tweaks to make travis-ci more happy with testing
          autodie.

        * BUGFIX: autodie no longer weakens strict by allowing
          undeclared variables with the same name as built-ins.
          (RT #74246, thanks to Neils Thykier and Father
          Chrysostomos.)

        * BUGFIX: `use autodie qw( foo ! foo);` now correctly
          insists that we have hints for foo. (Thanks Niels Thykier)

        * INTERNAL: Improved benchmarking code, thanks to
          Niels Thykier.

2.22      2013-09-21 11:37:14 Asia/Tokyo

        * TEST / INTERNAL: Restore timestamps on touched testing
          files to avoid git flagging files having changed in
          git. (RT #88444, courtesy shay@cpan)

2.21      2013-09-12 13:17:23 Australia/Melbourne

        Many more improvements from Niels Thykier, great hero of the
        free people. Plus a compatibility patch from Zefram, keeper
        of Carp.

        * SPEED / INTERNAL : Through the magic of globally reuseable
          core leak trampolines, autodie is even faster when used across
          multiple pacakages.

        * SPEED / INTERNAL : Caches used for keeping track of
          fatalised subroutines are faster and leaner.

        * SPEED / INTERNAL : Core subroutine wrappers are now lazily
          compiled.

        * SPEED / INTERNAL : Using autodie while autodie is already in
          effect is now faster and more efficient.

        * INTERNAL : $" and $! are no longer arbitrarily messed with
          for no reason via autodie.  (They're still messed with when
          using Fatal.)

        * SPEED / INTERNAL : The ':all' tag hierachy is expanded
          immediately, in an efficient fashion.
